# risc86

./: .gitignore  CMakeLists.txt  README.md
scripts/: build.bat  configure.bat  run.bat
src/: main.cpp
src/breakpoint/: breakpoint.hpp
src/decoder/: decoder.cpp  decoder.hpp
src/handler/: handler.cpp  handler.hpp
src/instruction/: instruction.hpp
src/instruction/b_type/: b_type.hpp
src/instruction/i_type/: i_type.hpp
src/instruction/j_type/: j_type.hpp
src/instruction/r_type/: r_type.hpp
src/instruction/s_type/: s_type.hpp
src/instruction/u_type/: u_type.hpp
src/sdl/: helper.hpp  sdl.hpp
src/syscalls/: syscalls.cpp  syscalls.hpp
src/syscalls/impl/: io.hpp  memory.hpp  process.hpp  sdl.hpp
